--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     name: itproject
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m waitress Project.Project.asgi:application"
+    startCommand: "python -m gunicorn Project.Project.asgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
