--- a/Project/Dockerfile
+++ b/Project/Dockerfile
@@ -15,4 +15,5 @@ COPY . .
 EXPOSE 8000
 
 # Run Django server on all interfaces
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "wsgi:application", "--bind", "0.0.0.0:8000"]
+
