--- a/Project/Dockerfile
+++ b/Project/Dockerfile
@@ -15,5 +15,6 @@ COPY . .
 EXPOSE 8000
 
 # Run Django server on all interfaces
-CMD ["gunicorn", "wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "Project.wsgi:application", "--bind", "0.0.0.0:8000"]
+
 
